...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="84dp">


            <TextView
                android:id="@+id/itemAmount"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:text="Quantity"
                android:textSize="16sp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_image"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                android:color="@color/black"
                android:text="Item Name"
...
