...
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsNDirections" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/AddToCart"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons"
        android:text="Add to Cart!"
        android:textSize="30dp"
...
